[package]
name = "particle-lights"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18.1"
nannou_egui = "0.5.0"
tween = "2.0.0"
strum = "0.24.1"
strum_macros = "0.24.3"
artnet_protocol = "0.4.1"
